--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^4.1.0",
+    "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-query-devtools": "^5.81.5",
     "http-status-codes": "^2.3.0",
     "next": "15.1.7",
     "next-auth": "^5.0.0-beta.25",
